generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String                @id @default(cuid())
  email         String                @unique
  passwordHash  String
  name          String?
  phone         String?
  avatar        String?
  address       String?
  role          Role                  @default(CUSTOMER)
  isVerified    Boolean               @default(false)
  isBlocked     Boolean               @default(false)
  orders        Order[]
  sentMessages  Message[]             @relation("sender")
  chatRooms     ChatRoomParticipant[]
  notifications Notification[]
  reviews       Review[]
  wishlists     Wishlist[]
  couponUsages  CouponUsage[]
  wallet        UserWallet?
  createdAt     DateTime              @default(now())
  updatedAt     DateTime              @updatedAt
}

enum Role {
  CUSTOMER
  STAFF
  ADMIN
}

model OtpCode {
  id        String   @id @default(cuid())
  email     String
  code      String
  type      OtpType  @default(REGISTRATION)
  used      Boolean  @default(false)
  attempts  Int      @default(0)
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([email, type])
}

enum OtpType {
  REGISTRATION
  PASSWORD_RESET
}

model Product {
  id          String           @id @default(cuid())
  name        String
  description String?
  price       Int
  image       String?
  category    String?
  stock       Int              @default(0)
  isActive    Boolean          @default(true)
  orderItems  OrderItem[]
  variants    ProductVariant[]
  reviews     Review[]
  wishlists   Wishlist[]
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
}

model ProductVariant {
  id         String      @id @default(cuid())
  productId  String
  product    Product     @relation(fields: [productId], references: [id], onDelete: Cascade)
  sku        String      @unique
  title      String
  color      String?
  size       String?
  price      Int
  stock      Int         @default(0)
  image      String?
  isActive   Boolean     @default(true)
  orderItems OrderItem[]
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
}

model Order {
  id              String        @id @default(cuid())
  orderCode       String        @unique
  userId          String?
  user            User?         @relation(fields: [userId], references: [id])
  customerName    String
  customerPhone   String
  customerEmail   String?
  customerAddress String
  items           OrderItem[]
  totalAmount     Int
  subtotal        Int           @default(0)
  discountAmount  Int           @default(0)
  shippingFee     Int           @default(0)
  couponId        String?
  couponCode      String?
  coupon          Coupon?       @relation(fields: [couponId], references: [id])
  status          OrderStatus   @default(PENDING)
  paymentStatus   PaymentStatus @default(UNPAID)
  transaction     Transaction?
  chatRoom        ChatRoom?
  shipment        Shipment?
  qrContent       String?
  note            String?
  expiresAt       DateTime
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PROCESSING
  SHIPPING
  COMPLETED
  CANCELLED
}

enum PaymentStatus {
  UNPAID
  PAID
  EXPIRED
  REFUNDED
}

model OrderItem {
  id           String          @id @default(cuid())
  orderId      String
  order        Order           @relation(fields: [orderId], references: [id])
  productId    String
  product      Product         @relation(fields: [productId], references: [id])
  variantId    String?
  variantTitle String?
  variant      ProductVariant? @relation(fields: [variantId], references: [id])
  quantity     Int
  price        Int
}

model Coupon {
  id             String        @id @default(cuid())
  code           String        @unique
  description    String?
  discountType   DiscountType
  discountValue  Int
  maxDiscount    Int?
  minOrderAmount Int           @default(0)
  usageLimit     Int           @default(100)
  usedCount      Int           @default(0)
  perUserLimit   Int           @default(1)
  startDate      DateTime
  endDate        DateTime
  isActive       Boolean       @default(true)
  orders         Order[]
  userUsages     CouponUsage[]
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
}

enum DiscountType {
  FIXED
  PERCENTAGE
  FREE_SHIPPING
}

model CouponUsage {
  id        String   @id @default(cuid())
  couponId  String
  coupon    Coupon   @relation(fields: [couponId], references: [id])
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  orderId   String
  createdAt DateTime @default(now())

  @@unique([couponId, userId, orderId])
}

model Review {
  id         String   @id @default(cuid())
  productId  String
  product    Product  @relation(fields: [productId], references: [id])
  userId     String
  user       User     @relation(fields: [userId], references: [id])
  orderId    String
  rating     Int
  comment    String?
  images     String[]
  reply      String?
  isApproved Boolean  @default(true)
  createdAt  DateTime @default(now())

  @@unique([productId, userId, orderId])
}

model Wishlist {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  productId String
  product   Product  @relation(fields: [productId], references: [id])
  createdAt DateTime @default(now())

  @@unique([userId, productId])
}

model Transaction {
  id             String    @id @default(cuid())
  orderId        String    @unique
  order          Order     @relation(fields: [orderId], references: [id])
  bankTransId    String?   @unique
  amount         Int
  description    String
  bankName       String?
  senderAccount  String?
  receivedAt     DateTime?
  verified       Boolean   @default(false)
  rawWebhookData Json?
  createdAt      DateTime  @default(now())
}

model ChatRoom {
  id           String                @id @default(cuid())
  orderId      String?               @unique
  order        Order?                @relation(fields: [orderId], references: [id])
  participants ChatRoomParticipant[]
  messages     Message[]
  lastMessage  String?
  lastActiveAt DateTime              @default(now())
  createdAt    DateTime              @default(now())
}

model ChatRoomParticipant {
  id         String   @id @default(cuid())
  roomId     String
  room       ChatRoom @relation(fields: [roomId], references: [id], onDelete: Cascade)
  userId     String
  user       User     @relation(fields: [userId], references: [id])
  lastReadAt DateTime @default(now())
  createdAt  DateTime @default(now())

  @@unique([roomId, userId])
}

model Message {
  id        String      @id @default(cuid())
  roomId    String
  room      ChatRoom    @relation(fields: [roomId], references: [id], onDelete: Cascade)
  senderId  String
  sender    User        @relation("sender", fields: [senderId], references: [id])
  content   String
  type      MessageType @default(TEXT)
  imageUrl  String?
  isRead    Boolean     @default(false)
  createdAt DateTime    @default(now())

  @@index([roomId, createdAt])
}

enum MessageType {
  TEXT
  IMAGE
  SYSTEM
}

model Notification {
  id        String           @id @default(cuid())
  userId    String
  user      User             @relation(fields: [userId], references: [id])
  type      NotificationType
  title     String
  message   String
  data      Json?
  isRead    Boolean          @default(false)
  createdAt DateTime         @default(now())

  @@index([userId, isRead, createdAt])
}

enum NotificationType {
  ORDER_CREATED
  ORDER_CONFIRMED
  PAYMENT_RECEIVED
  ORDER_SHIPPING
  ORDER_COMPLETED
  NEW_MESSAGE
  OTP_SENT
}

// ==========================================
// MỞ RỘNG TRỤ CỘT 2: LOGISTICS AUTOMATION
// ==========================================

model Shipment {
  id               String         @id @default(cuid())
  orderId          String         @unique
  order            Order          @relation(fields: [orderId], references: [id], onDelete: Cascade)
  carrier          CarrierName    @default(GHN)
  trackingCode     String         @unique
  shippingFee      Int
  codAmount        Int            @default(0)
  status           ShipmentStatus @default(READY_TO_PICK)
  estimatedArrival DateTime?
  shippingLogs     Json?
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
}

enum CarrierName {
  GHN
  GHTK
  VIETTEL_POST
}

enum ShipmentStatus {
  READY_TO_PICK
  PICKING
  DELIVERING
  DELIVERED
  RETURNED
  CANCELLED
}

// ==========================================
// MỞ RỘNG TRỤ CỘT 3: VÍ NỘI BỘ & HOÀN TIỀN
// ==========================================

model UserWallet {
  id           String              @id @default(cuid())
  userId       String              @unique
  user         User                @relation(fields: [userId], references: [id], onDelete: Cascade)
  balance      Int                 @default(0)
  transactions WalletTransaction[]
  createdAt    DateTime            @default(now())
  updatedAt    DateTime            @updatedAt
}

model WalletTransaction {
  id          String       @id @default(cuid())
  walletId    String
  wallet      UserWallet   @relation(fields: [walletId], references: [id], onDelete: Cascade)
  amount      Int
  type        WalletTxType
  orderId     String?
  description String
  createdAt   DateTime     @default(now())

  @@index([walletId, createdAt])
}

enum WalletTxType {
  REFUND
  PURCHASE_PAYMENT
  TOPUP
}

